--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CRM_CUS</title>
+    <title>@ViewData["Title"] - CRM_Управление Клиентами Онлайн</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CRM_CUS.styles.css" asp-append-version="true" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CRM_CUS</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CRM_Управление Клиентами Онлайн</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,24 +20,33 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="People" asp-action="Index">Клиенты</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Passports" asp-action="Index">Паспорта</a>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TypeDocuments" asp-action="Index">Типы паспортов</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TypeDocuments" asp-action="Index">Типы Паспортов</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Phones" asp-action="Index">Телефоны</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Addresses" asp-action="Index">Адреса</a>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="AddressTypes" asp-action="Index">Типы адресов</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AddressTypes" asp-action="Index">Типы Адресов</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AccountDeposits" asp-action="Index">Счета(Пополнение)</a>
+                             <a class="nav-link text-dark" asp-area="" asp-controller="ChannelDeposits" asp-action="Index">Каналы(Пополнение)</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ChannelLimits" asp-action="Index">Каналы(Лимиты)</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Transactions" asp-action="Index">Транзакции</a>
+                             <a class="nav-link text-dark" asp-area="" asp-controller="TransactionTypes" asp-action="Index">Типы Транзакций</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Isocurrencies" asp-action="Index">Валюты</a>
                         </li>
                     </ul>
                 </div>
